# bachelor-poc

./: README.md  main.py  pyproject.toml
lantner/: .gitignore  LICENSE  README.md  pyproject.toml
lantner/src/: __init__.py
