[project]
name = "bp-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "accelerate>=1.5.2",
    "beautifulsoup4>=4.13.3",
    "black>=25.1.0",
    "dspy>=2.6.14",
    "gliner>=0.2.17",
    "httpx>=0.28.1",
    "ipykernel>=6.29.5",
    "markdownify>=1.1.0",
    "python-dotenv>=1.0.1",
    "ruff>=0.11.2",
    "scikit-learn>=1.6.1",
    "nervaluate>=0.2.0",
    "rouge-score>=0.1.2",
]
